--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ nav li {
 .banner {
     display: flex;
     align-items: center;
-    gap: 130px;
+    gap: 60px;
     margin: 0 120px;
 }
 
@@ -75,8 +75,8 @@ nav li {
 
 
 .main-camera {
-    width: 100%;
-    height: 100%;
+    width:475px;
+    height: 475px;
     border-radius: 50%;
     border: 3px solid #F1E4FF;
     
@@ -84,6 +84,7 @@ nav li {
 
 .main-camera img {
     width: 100%;
+    height: 100%;
 }
 
 .btn-primary {
@@ -119,16 +120,26 @@ button .fa-solid {
     padding-top: 40px;
     padding-bottom: 40px;
     gap: 60px;
+    /* border: 2px solid red; */
+    max-width: 80%;
+    padding-left: 60px;
+    padding-right: 40px;
 }
 
 .logo div {
-    width: 111px;
-    height: 26px;
-}
-
-.logo img {
     width: 100%;
     height: 100%;
+    /* border: 3px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo div img {
+    width: 80%;
+    height: 80%;
+    /* border: 2px solid green; */
+    
    
 
 }
@@ -400,6 +411,8 @@ main {
     .logo div {
         width: 100%;
         height: 100%;
+        
+        
     }
     
     .logo img {
